ingress/k3s-nginx-gateway-tls-single-entry-point/manifests/06_routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuard
spec:
  parentRefs:
  - name: gateway
    namespace: nginx-gateway
    sectionName: http
  - name: gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "kuard.example.tld"
  #        ^^^^^^^^^^^
  # Update as required
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kuard
      port: 80
